--- a/app/assets/stylesheets/style.css
+++ b/app/assets/stylesheets/style.css
@@ -11,6 +11,10 @@ body {
   width: 820px; /* downsize our container to make the content feel a bit tighter and more cohesive. NOTE: this removes two full columns from the grid, meaning you only go to 14 columns and not 16. */
 }
 
+.home {
+  border: 0;
+}
+
 /* The white background content wrapper */
 .content {
   background-color: #fff;
