--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -6,13 +6,14 @@
         <li class="active"><a href="#">Home</a></li>
         <li><a href="#about">About</a></li>
         <li><a href="#contact">Contact</a></li>
+        <% if current_user %>
+          <li><%= link_to "Edit Profile",edit_user_path(:current)%></li>
+          <li><%= link_to "Logout", logout_path %></li>
+        <% else %>
+        <li><%= link_to 'Sign In', :controller=> "user_sessions", :action=> "new" %></li>
+        <li><%= link_to 'Sign Up', new_user_path %></li>
+        <% end %>
       </ul>
-      <form action="" class="pull-right">
-        <input class="input-small" type="text" placeholder="Username">
-        <input class="input-small" type="password" placeholder="Password">
-        <%= link_to 'Sign In', :controller=> "user_sessions", :action=> "new" %>
-        <%= link_to 'Sign Up', new_user_path %>
-      </form>
     </div>
   </div>
 </div>
