--- a/app/views/hotels/_listing1.html.erb
+++ b/app/views/hotels/_listing1.html.erb
@@ -1,2 +1,5 @@
-<%= link_to fooditem.name , :controller => 'fooditems', :acton => 'show',:id => fooditem.id%>
-<br/>
+<tr>
+<td>
+<%= link_to fooditem.name ,hotel_fooditem_path(hotel,fooditem)%>
+</td>
+</tr>
