paperclip for adding image for user and fooditems

--- a/app/views/fooditems/show.html.erb
+++ b/app/views/fooditems/show.html.erb
@@ -5,6 +5,7 @@
   <%= @hotel.name %> <%= @hotel.location %>
 <% end %>
 <h1><%= @fooditem.name %></h1>
+  <%= image_tag @fooditem.photo.url %>
   <div class="field">
     <%= "Price" %><br />
     <%= @fooditem.price%>
