--- a/app/views/fooditems/new.html.erb
+++ b/app/views/fooditems/new.html.erb
@@ -16,6 +16,9 @@
     <%= f.label :description %><br />
     <%= f.text_area :description %>
   </div>
+  <div class="clearfix">
+    <%= f.file_field :photo %>
+  </div>
   <div class="actions">
     <%= f.submit %>
   </div>
