--- a/app/views/users/_form.html.erb
+++ b/app/views/users/_form.html.erb
@@ -1,4 +1,4 @@
-<%= form_for @user, :url => { :action => "create" } do |f| %>
+<%= form_for @user, :url => { :action => "create" }, :html => { :multipart => true } do |f| %>
   <% if @user.errors.full_messages.each %>
     <ul class="alert-message block-message error">
       <% @user.errors.full_messages.each do |msg| %>
@@ -38,6 +38,9 @@
     <div class="input">
       <%= f.password_field :password_confirmation%>
     </div>
+  </div>
+  <div class="clearfix">
+    <%= f.file_field :photo %>
   </div>
   <div class="actions">
     <%= f.submit "Submit", :class=>"btn primary" %>
