--- a/app/views/users/_form1.html.erb
+++ b/app/views/users/_form1.html.erb
@@ -1,4 +1,4 @@
-<%= form_for @user, :url => { :action => "update" } do |f| %>
+<%= form_for @user, :url => { :action => "update" } , :html => { :multipart => true } do |f| %>
 <div class="clearfix">
     <%= f.label :name %>
     <div class="input">
@@ -28,6 +28,9 @@
     <div class="input">
       <%= f.password_field :password_confirmation%>
     </div>
+  </div>
+  <div class="clearfix">
+    <%= f.file_field :photo %>
   </div>
   <div class="actions">
     <%= f.submit "Submit", :class=>"btn primary" %>
