--- a/app/views/comments/show.html.erb
+++ b/app/views/comments/show.html.erb
@@ -8,3 +8,10 @@
     <div class="field">
     <%= @comment.body %>
   </div>
+  <br/>
+  <br/><br/><br/><br/>
+  <ul class="pager">
+      <li>
+        <%= link_to "back" ,@hotel %>
+      </li>
+  </ul>
