--- a/app/views/comments/new.html.erb
+++ b/app/views/comments/new.html.erb
@@ -1,14 +1,26 @@
 <h1>new</h1>
 <%= form_for([@hotel, @hotel.comments.build]) do |f| %>
   <div class="field">
-    <%= f.label :commenter %><br />
-    <%= f.text_field :commenter %>
+    <%= f.label :commenter %>
+    <div class="input">
+      <%= f.text_field :commenter %>
+    </div>
   </div>
+<br/>
+<br/>
   <div class="field">
-    <%= f.label :body %><br />
-    <%= f.text_area :body %>
+    <%= f.label :body %>
+    <div class="input">
+      <%= f.text_area :body %>
+    </div>
   </div>
   <div class="actions">
-    <%= f.submit %>
+    <%= f.submit :class=>"btn primary"%>
   </div>
+    <ul class="pager">
+      <li>
+        <%= link_to "back" ,@hotel %>
+      </li>
+    </ul>
+
 <% end %>
