--- a/app/views/hotels/_listing1.html.erb
+++ b/app/views/hotels/_listing1.html.erb
@@ -2,4 +2,7 @@
 <td>
 <%= link_to fooditem.name ,hotel_fooditem_path(hotel,fooditem)%>
 </td>
+<td>
+<%= link_to "Edit" , edit_hotel_fooditem_path(hotel,fooditem) %>
+</td>
 </tr>
