--- a/app/views/fooditems/new.html.erb
+++ b/app/views/fooditems/new.html.erb
@@ -1,25 +1,42 @@
 <h1>new</h1>
 <%= form_for([@hotel, @hotel.fooditems.build]) do |f| %>
   <div class="field">
-    <%= f.label :name %><br />
-    <%= f.text_field :name %>
+    <%= f.label :name %>
+    <div class="input">
+      <%= f.text_field :name %>
+    </div>
   </div>
+  <br/><br/>
   <div class="field">
-    <%= f.label :price %><br />
+    <%= f.label :price %>
+      <div class="input">
     <%= f.text_field :price %>
+      </div>
   </div>
+  <br/><br/>
   <div class="field">
-    <%= f.label :category %><br />
+    <%= f.label :category %>
+    <div class="input">
     <%= f.text_field :category %>
+    </div>
   </div>
+  <br/><br/>
   <div class="field">
-    <%= f.label :description %><br />
-    <%= f.text_area :description %>
+    <%= f.label :description %>
+    <div class="input">
+      <%= f.text_area :description %>
+    </div>
   </div>
+
   <div class="clearfix">
     <%= f.file_field :photo %>
   </div>
   <div class="actions">
-    <%= f.submit %>
+    <%= f.submit "Create Food Item", :class=>"btn primary" %>
   </div>
+  <ul class="pager">
+      <li>
+        <%= link_to "back" ,@hotel %>
+      </li>
+  </ul>
 <% end %>
