--- a/app/views/hotels/_form.html.erb
+++ b/app/views/hotels/_form.html.erb
@@ -1,10 +1,14 @@
 <%= form_for @hotel, :url => { :controller => "hotels", :action => "create" } do |f| %>
 
+    <% if @hotel.errors.full_messages[0] %>
     <ul class="alert-message block-message error">
       <% @hotel.errors.full_messages.each do |msg| %>
         <li><%= msg %></li>
-    <% end %>
+      <% end %>
     </ul>
+
+  <% else %>
+  <% end %>
 
   <div class="clearfix">
     <%= f.label :name %>
