--- a/app/views/comments/new.html.erb
+++ b/app/views/comments/new.html.erb
@@ -1,5 +1,6 @@
-<h1>new</h1>
+<h1>New</h1>
 <%= form_for([@hotel, @hotel.comments.build]) do |f| %>
+
   <div class="field">
     <%= f.label :commenter %>
     <div class="input">
