--- a/app/views/password_resets/new.html.erb
+++ b/app/views/password_resets/new.html.erb
@@ -7,5 +7,5 @@ Fill out the form below and instructions to reset your password will be emailed 
   <label>Email:</label><br />
   <%= text_field_tag "email" %><br />
   <br />
-  <%= submit_tag "Reset my password" %>
+  <%= submit_tag "Reset my password" , :class => "btn-primary"%>
 <% end %>
