--- a/app/views/hotels/_listing1.html.erb
+++ b/app/views/hotels/_listing1.html.erb
@@ -1,12 +1,11 @@
 <tr>
 <td>
-<%= link_to fooditem.name ,hotel_fooditem_path(hotel,fooditem)%>
+<%= link_to fooditem.name ,fooditem_path(fooditem)%>
 </td>
 <td>
-<%= link_to "Edit" , edit_hotel_fooditem_path(hotel,fooditem) %>
+<%= link_to "Edit" , edit_fooditem_path(fooditem) %>
 </td>
 <td>
-<%= link_to 'Delete', hotel_fooditem_path(hotel,fooditem) ,
-      :method => :delete %>
+<%= link_to 'Delete', fooditem, :confirm => 'Are you sure?', :method => :delete%>
 </td>
 </tr>
