--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -6,6 +6,7 @@
         <% if current_user %>
           <li><%= link_to 'Hotels',:controller =>'hotels',:action => 'index' %></li>
           <li><%= link_to 'Add Hotel',:controller =>'hotels',:action => 'new' %></li>
+          <li><%= link_to 'Add Fooditem',:controller =>'fooditems',:action => 'new' %></li>
           <li><%= link_to "Profile", :action => "show", :controller => "users",:id => :current%></li>
           <li><%= link_to "Edit Profile",edit_user_path(:current)%></li>
           <li><%= link_to "Logout", logout_path %></li>
