--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -2,7 +2,10 @@
   <head>
     <%= yield :head %>
     <link href="http://twitter.github.com/bootstrap/1.4.0/bootstrap.css" rel="stylesheet">
+    <link href="http://jacklmoore.com/colorbox/example1/colorbox.css" rel="stylesheet">
     <%= stylesheet_link_tag "style" %>
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.7.1/jquery.min.js"></script>
+    <script src="http://jacklmoore.com/colorbox/colorbox/jquery.colorbox.js"></script>
   </head>
   <body>
 
